--- a/site/index.html
+++ b/site/index.html
@@ -20,7 +20,7 @@
           </a>
 
           <div class="navbar-brand">
-          <a href="index.html" ><h1>Lalalalal's Italian Bisrtro</h1></a>  
+          <a href="index.html" ><h1>David's Italian Bisrtro</h1></a>  
           <p>
           <img src="images/star-logo.png" alt="Kocher certificaiton">
           <span>Traditional cuisine</span>
